@@ -153,6 +153,14 @@
             <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
               <skip>true</skip>
+              <forkCount>1</forkCount>
+              <reuseForks>true</reuseForks>
+              <argLine>
+                --add-opens java.base/java.lang=ALL-UNNAMED
+                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                -Dillegal-access=permit
+              </argLine>
             </configuration>
           </plugin>
         </plugins>
